# selenium-up

./: .gitignore  .project  Connection.py  Content.md  DownloadDrivers.py  DriverAction.py  Example.md  LICENSE  Log.py  ParseToolkit.py  ParseToolkits.py  README.md  SaveAction.py  SaveToolKit.py  Workflow.py  __init__.py  main.py  pom.xml  pyproject.toml  requirements.txt  settings.py  setup.py
.github/workflow/: flow.yml
.github/workflows/: flow.yml  java-flow.yml
java/selenium_up/: .classpath  .project  pom.xml
java/selenium_up/src/main/java/sele_up_java/selenium_up/: CustomLog.java  EmailConfig.java  LogTest.java
java/selenium_up/src/main/resources/: logback.xml
java/selenium_up/src/test/java/sele_up_java/selenium_up/: AppTest.java
seleniumUp/: Connection.py  DownloadDrivers.py  DriverAction.py  Log.py  ParseToolkit.py  SaveToolkit.py  Workflow.py  __init__.py  main.py
src/: Connection.py  DownloadDrivers.py  ParseToolkit.py  settings.py
src/main/java/logger/: CustomLog.java  EmailConfig.java  LogTest.java
src/main/java/selenium/: Connection.java  DriverAction.java
src/main/logger/: CustomLog.java
src/main/python/: DownloadDrivers.py
src/main/resources/: logback.xml  stealth.min.js
